Fix poorly overflowing container

--- a/UI/signIn.css
+++ b/UI/signIn.css
@@ -11,7 +11,7 @@ body {
     width: 50%;
     margin: 5% auto;
     padding: 4rem;
-    height: 25rem;
+    height: 22rem;
     box-shadow: 5px 2px 5px grey;
 }
 
